// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can be controlled 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalHeader"
      data-test-id="cf-ui-modal-header"
    >
      <h1
        class="ModalHeader__title"
      >
        Hello
      </h1>
      <button
        class="IconButton IconButton--muted"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="TabFocusTrap IconButton__inner"
          tabindex="-1"
        >
          <svg
            class="Icon Icon--small Icon--primary IconButton__icon"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          <span
            class="IconButton__label"
          >
            Close
          </span>
        </span>
      </button>
    </div>
    <div
      class="ModalContent"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
    <div
      class="ModalControls"
      data-test-id="cf-ui-modal-controls"
    >
      <button
        type="button"
      >
        Click on me
      </button>
    </div>
  </div>
</div>
`;

exports[`can override header and content properties 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalHeader additional-header-class"
      data-test-id="cf-ui-modal-header"
    >
      <h1
        class="ModalHeader__title ModalHeader__title--is-not-wrapped"
      >
        Hello!
      </h1>
      <button
        class="IconButton IconButton--muted"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="TabFocusTrap IconButton__inner"
          tabindex="-1"
        >
          <svg
            class="Icon Icon--small Icon--primary IconButton__icon"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          <span
            class="IconButton__label"
          >
            Close
          </span>
        </span>
      </button>
    </div>
    <div
      class="ModalContent additional-content-class"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalHeader"
      data-test-id="cf-ui-modal-header"
    >
      <h1
        class="ModalHeader__title"
      >
        Title
      </h1>
      <button
        class="IconButton IconButton--muted"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="TabFocusTrap IconButton__inner"
          tabindex="-1"
        >
          <svg
            class="Icon Icon--small Icon--primary IconButton__icon"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          <span
            class="IconButton__label"
          >
            Close
          </span>
        </span>
      </button>
    </div>
    <div
      class="ModalContent"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders the component without title 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalContent"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
  </div>
</div>
`;
